fixed whitespace android scroll bug

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
-body {
-  display: none;
-  max-height: 100%;
+html {
+    overflow: hidden;
+    -webkit-text-size-adjust: none;
+    height: 100%;
 }
 
-html {
-  -webkit-text-size-adjust: none;
+body {
+    height: 100%;
+    display: none;
+    overflow: auto;
 }
 
 h1,
